[tool.poetry]
name = "chubedan-chatui"
version = "0.1.0"
description = "Chat UI backend with FastAPI and Google Generative AI"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "24.1.0"
fastapi = "0.115.12"
Jinja2 = "3.1.6"
google-generativeai = "0.8.5"
python-dotenv = "1.1.0"
python-multipart = "0.0.20"
uvicorn = "0.34.3"
websockets = "15.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
